[gd_scene load_steps=5 format=3 uid="uid://lbrp1yxmyc47"]

[ext_resource type="Script" path="res://Scenes/ShopMenu/shop_menu.gd" id="1_qdtm5"]
[ext_resource type="Theme" uid="uid://bj3ryenfgg5p6" path="res://UI.tres" id="2_mg4uc"]
[ext_resource type="Texture2D" uid="uid://bcbq6fw28xyfh" path="res://Assets/UIassets/Pixelart Graphical User Interface/Icons Style 3/Style 3 Icon 001.png" id="3_lruxa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gkns"]

[node name="ShopMenu" type="Area2D"]
process_mode = 3
z_index = 1
script = ExtResource("1_qdtm5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6gkns")

[node name="ShopMenuContainer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="ShopMenuContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 350.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
theme = ExtResource("2_mg4uc")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="ShopMenuContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TopPanels" type="HBoxContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="TextLine_Or_Chars_viable" type="Panel" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/TopPanels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/TopPanels/TextLine_Or_Chars_viable"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "merchant speech here Or Character equip eligibility"
autowrap_mode = 2

[node name="Money" type="Panel" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/TopPanels"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/TopPanels/Money"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Gold" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/TopPanels/Money/MarginContainer"]
layout_mode = 2
text = "Gold:"
vertical_alignment = 1

[node name="Total" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/TopPanels/Money/MarginContainer"]
layout_mode = 2
text = "1234567
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CenterPanels" type="HBoxContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 30

[node name="Selector" type="Panel" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selector"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 134.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="VBoxContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selector/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Buy" type="Button" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selector/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "BUY"

[node name="Sell" type="Button" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selector/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "SELL"

[node name="Selection" type="Panel" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="BuyInventory" type="MarginContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="BuyMenuColumns" type="VBoxContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="NameAndPricePanels" type="HBoxContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 280

[node name="ColumnName" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/NameAndPricePanels"]
layout_mode = 2
size_flags_horizontal = 3
text = "ItemName"

[node name="ColumnPrice" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/NameAndPricePanels"]
layout_mode = 2
size_flags_horizontal = 6
text = "Price"
horizontal_alignment = 2

[node name="ShopItem" type="Control" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 40.0

[node name="ItemIcon" type="TextureRect" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource("3_lruxa")
stretch_mode = 2

[node name="ItemName" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem/HBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "Some Mighty Sword"

[node name="Price" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "100000"
horizontal_alignment = 2

[node name="ShopItem2" type="Control" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem2"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 40.0

[node name="ItemIcon" type="TextureRect" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource("3_lruxa")
stretch_mode = 2

[node name="ItemName" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem2/HBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "Some Mighty Sword"

[node name="Price" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem2/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "900"
horizontal_alignment = 2

[node name="ShopItem3" type="Control" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem3"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 40.0

[node name="ItemIcon" type="TextureRect" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource("3_lruxa")
stretch_mode = 2

[node name="ItemName" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem3/HBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "Some Mighty Sword"

[node name="Price" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem3/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "900"
horizontal_alignment = 2

[node name="ShopItem4" type="Control" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem4"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 40.0

[node name="ItemIcon" type="TextureRect" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource("3_lruxa")
stretch_mode = 2

[node name="ItemName" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem4/HBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "Some Mighty Sword"

[node name="Price" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem4/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "900"
horizontal_alignment = 2

[node name="ShopItem5" type="Control" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem5"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 40.0

[node name="ItemIcon" type="TextureRect" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource("3_lruxa")
stretch_mode = 2

[node name="ItemName" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem5/HBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "Some Mighty Sword"

[node name="Price" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection/BuyInventory/BuyMenuColumns/ShopItem5/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
text = "900"
horizontal_alignment = 2

[node name="SellInventory" type="MarginContainer" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/CenterPanels/Selection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Description" type="Panel" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="ShopMenuContainer/PanelContainer/MarginContainer/VBoxContainer/Description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Item Description information goes here and we need to make sure its limited"
autowrap_mode = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
